--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "pg": "^6.1.2",
+    "sequelize": "^3.30.2"
   },
   "bugs": {
     "url": "https://github.com/JackieCabinet/teachable/issues"
