--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
     "express": "^4.14.1",
+    "json2csv": "^3.7.3",
     "pg": "^6.1.2",
     "sequelize": "^3.30.2"
   },
   "bugs": {
     "url": "https://github.com/JackieCabinet/teachable/issues"
   },
-  "homepage": "https://github.com/JackieCabinet/teachable#readme"
+  "homepage": "https://github.com/JackieCabinet/teachable#readme",
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
